# prexp

./: CLAUDE.md  LICENSE  README.md
.claude/skills/adding-integration-tests/: SKILL.md
.claude/skills/adding-unit-tests/: SKILL.md
.claude/skills/component-design/: SKILL.md
.claude/skills/error-handling/: SKILL.md
.claude/skills/inversion-of-control/: SKILL.md
.claude/skills/project-documentation/: SKILL.md
.claude/skills/project-structure/: SKILL.md
.claude/skills/test-data-isolation/: SKILL.md
.claude/skills/testing-boundaries/: SKILL.md
crates/prexp/: Cargo.toml
crates/prexp-core/: Cargo.toml
crates/prexp-core/src/: error.rs  lib.rs  models.rs  source.rs
crates/prexp-core/src/backend/: macos.rs  mod.rs
crates/prexp-core/src/output/: json.rs  mod.rs  tsv.rs
crates/prexp-core/tests/: output_test.rs  reverse_lookup_test.rs
crates/prexp-core/tests/support/: fake_source.rs
crates/prexp-ffi/: Cargo.toml
crates/prexp-ffi/src/: error.rs  lib.rs  process.rs  raw.rs  safe.rs  system.rs
crates/prexp-ffi/tests/: smoke_test.rs
crates/prexp/src/: cli.rs  main.rs
crates/prexp/src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
crates/prexp/src/tui/app/: mod.rs  search.rs  sorting.rs  stats.rs  tree.rs
crates/prexp/src/tui/ui/: file_list.rs  info_panel.rs  mod.rs  overlays.rs  process_list.rs
crates/prexp/tests/: app_state_test.rs
crates/prexp/tests/support/: fake_source.rs  mod.rs
