[package]
name = "prexp-core"
version = "0.1.0"
edition = "2021"
description = "Domain models, ProcessSource trait, backends, and output formatters for prexp"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
prexp-ffi = { path = "../prexp-ffi" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17"
